--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,19 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Formulaire</title>
+    <title>Formulaire Visiteur</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <body>
-    <h1>soyez  la bienvenue sur ce site en tant que visiteur</h1>
-    <h1>Ajouter un visiteur</h1>
-    <form action="{{ url_for('ajouter') }}" method="POST">
-        Nom : <input type="text" name="nom" required><br>
-        Email : <input type="email" name="email" required><br>
-        <input type="submit" value="Enregistrer">
-    </form>
-
-    <br>
-    <a href="{{ url_for('liste_visiteurs') }}">Voir la liste des visiteurs</a>
+    <div class="container">
+        <h1>Bienvenue sur ce site</h1>
+        <h2>Ajouter un visiteur</h2>
+        <form method="POST">
+            <input type="text" name="nom" placeholder="Nom" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <input type="submit" value="Enregistrer">
+        </form>
+        <a href="{{ url_for('liste_visiteurs') }}">Voir la liste des visiteurs</a>
+    </div>
 </body>
 </html>
